--- a/course-service/src/main/resources/application.properties
+++ b/course-service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.application.name=course-service
+server.port=8086
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/courseService?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=cisco12345Z$
 
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
