--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.application.name=discovery-server
+#default port
+server.port=8761
 
+#To avoid eureka from registering itself - stop acting like a eureka client
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
