implement api-gateway

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.application.name=api-gateway
+server.port=8084
 
+logging.level.root=INFO
+logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
+logging.level.org.springframework.cloud.gateway=TRACE
+
+# Management Service Route
+spring.cloud.gateway.routes[0].id=management-service
+spring.cloud.gateway.routes[0].uri=http://management-service
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/management
