--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -5,7 +5,14 @@ logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
 logging.level.org.springframework.cloud.gateway=TRACE
 
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+#http://localhost:8084/management-service/api/v1/management/S002
+
 # Management Service Route
-spring.cloud.gateway.routes[0].id=management-service
-spring.cloud.gateway.routes[0].uri=http://management-service
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/management
+#spring.cloud.gateway.routes[0].id=management-service
+#spring.cloud.gateway.routes[0].uri=http://management-service
+#spring.cloud.gateway.routes[0].predicates[0]=Path=/api/management
