implement circuit breaker

--- a/management-service/src/main/resources/application.properties
+++ b/management-service/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.port=8085
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
+resilience4j.retry.instances.management-api.max-attempts=5
+resilience4j.retry.instances.management-api.wait-duration=1s
+resilience4j.retry.instances.management-api.enable-exponential-backoff=true
+
