impl of logs and read values from property file | management service

--- a/management-service/src/main/resources/application.properties
+++ b/management-service/src/main/resources/application.properties
@@ -7,3 +7,9 @@ resilience4j.retry.instances.management-api.max-attempts=5
 resilience4j.retry.instances.management-api.wait-duration=1s
 resilience4j.retry.instances.management-api.enable-exponential-backoff=true
 
+student.service.url=http://student-service/api/v1/student/
+teacher.service.url=http://teacher-service/api/v1/teacher/
+course.service.url=http://course-service/api/v1/course/
+
+fallback.msg.symbol=:(
+
