management service exception handling

--- a/management-service/src/main/resources/application.properties
+++ b/management-service/src/main/resources/application.properties
@@ -13,3 +13,4 @@ course.service.url=http://course-service/api/v1/course/
 
 fallback.msg.symbol=:(
 
+error.code.student.not-present=404 Not Found from GET
